# penwings

./: LICENSE  README.md  pyproject.toml
src/penwings/: __init__.py  _version.py  paths.py
src/penwings/_utils/: _decorators.py  _typing.py
src/penwings/io/: __init__.py  cache.py
src/penwings/paths/: __init__.py  project_paths.py
