[project]
name = "penwings"
dynamic = ["version"]
description = "Lightweight library to handle data and reproduce workflows"
readme = "README.md"
license = {text = "LICENSE"}
authors = [
    {name = "Raf Blanckaert",email = "R.Blanckaert@outlook.com"}
]
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "pyodbc (>=5.3.0,<6.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "numpy (>=2.4.1,<3.0.0)"
]

[project.urls]
Homepage = "https://github.com/Frissie/penwings"
Repository = "https://github.com/Frissie/penwings"
Issues = "https://github.com/Frissie/penwings/issues"


[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
tag_regex = "^v(?P<version>.*)$"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["penwings*"]
exclude = ["penwings._*"]

[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "openpyxl>=3.1.5",
    "optuna>=4.7.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
]

[project.optional-dependencies]
scipy = ["scipy (>=1.17.0,<2.0.0)"]
sklearn = ["scikit-learn (>=1.8.0,<2.0.0)"]
optuna= ["optuna (>=4.7.0,<5.0.0)"]
all = ["openpyxl (>=3.1.5,<4.0.0)"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true