[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "penwings"
dynamic = ["version"]
description = "Lightweight library to handle data and reproduce workflows"
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
authors = [
    { name = "Raf Blanckaert", email = "r.blanckaert@outlook.com" }
]
requires-python = ">=3.11"

keywords = ["data", "workflow", "reproducibility", "sql", "analytics"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "pandas>=2.2,<4.0",
    "numpy>=1.26,<3.0",
]

[project.optional-dependencies]
sql = ["sqlalchemy>=2.0,<3.0"]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
    "mypy>=1.8",
    "sqlalchemy>=2.0,<3.0",
]

[project.urls]
Homepage = "https://github.com/Frissie/penwings"
Repository = "https://github.com/Frissie/penwings"
Issues = "https://github.com/Frissie/penwings/issues"

# setuptools config
[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["penwings*"]

# Versioning via SCM
[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
tag_regex = "^v(?P<version>.*)$"
